2009-01-19  Quentin Mathe <qmathe@club-internet.fr>

	Rewritten the basic inspector support to be entirely handled outside of 
	ETContainer.
	* ETContainer:
	Corrected EtoileUI header import statements to be local.
	Removed _inspector ivar and related code in -initWithFrame:layoutItem: and 
	-dealloc.
	Removed ETObjectInspection conformance.
	(-inspect:, -inspectSelection:): Deprecated and rewritten to rely on 
	NSObject+EtoileUI and ETLayoutItem.
	(-setInspector:, -inspector, -inspectorForItems:): Removed.
	* ETLayoutItem:
	New property kETInspectorProperty.
	(-validateUserInterfaceItem:): Added. This will be used by the new event 
	handling model.
	(-showInspectorPanel): Removed.
	(-inspector): Rewritten.
	(-setInspector:): Added.
	* NSObject+EtoileUI (-inspect:): Modified to use the inspector provided by 
	the receiver when a custom one is available.
	* ETInspecting: Renamed inspectedItems property of ETInspector protocol to 
	inspectedObjects.
	* ETInspector: Removed the deprecated inspectedItems accessors.

2009-01-18  Quentin Mathe <qmathe@club-internet.fr>

	* ETApplication (-finishLaunching): Fixed the missing title of the 
	application menu on GNUstep and the repeated logging of 'Services menu not 
	in main menu!'. This bug was recently introduced with r4188.

2009-01-09  Quentin Mathe <qmathe@club-internet.fr>

	Optimized drawing to only redraw dirty portion of the layout item tree. 
	More documentation. 
	Few new utility methods related to the drawing or the geometry.
	* ETLayoutItem:
	Documented various methods.
	(-initWithView:value:representedObject:): Modified to set a default frame 
	if no view is provided.
	(-isBaseItem, -closestAncestorItemWithDisplayView, 
	-convertDisplayRect:toAncestorDisplayView:, -boundingBox, 
	-convertRectToParent:fromItem:, -convertRect:toItem:, -acceptsActions): 
	Added.
	(-setSelected:): Made KVO compliant.
	(-setNeedsDisplay:, -display): Rewritten to only trigger the redraw of the 