@@ -1,7 +1,9 @@
 /*
-	ETRenderer.h
+	ETShape.h
 	
-	Description forthcoming.
+	An ETStyle subclass used to represent arbitrary shapes. These shapes can be
+	primitives such as rectangles, oval etc. or more complex shapes that embed 
+	or combine text, image, shadow, mask etc.
  
 	Copyright (C) 2007 Quentin Mathe
  
@@ -35,96 +37,64 @@
 
 #import <Foundation/Foundation.h>
 #import <AppKit/AppKit.h>
+#import <EtoileUI/ETStyle.h>
 
-// WARNING: Very unstable API. Please don't use.
-
-/** Factory renderer constants that can be used to retrieve a renderer */
-kETSelectionStyle
-kETBlurFilter
-kETBrushTool
-etc.
-
-@interface ETRenderer : NSObject
-{
-	ETRenderer *_nextRenderer;
-}
-
-/** Returns renderer shared instance identified by name parameter. 
-	In fact returns a proxy renderer referencing the real renderer. But the 
-	proxy behaves exactly like the real instance. Proxy class is 
-	ETProxyRenderer subclass of ETRenderer. */
-+ (ETRenderer *) rendererForName:
-
--registerRendererForName:
--unregisterRendererForName:
-
-/* Accessors */
-
--setName:
--name
-
-/** Before calling any rendering methods, you need to lock the focus on some
-	output view or image. */
-- (void) render: (NSDictionary *)inputValues;
-// Method below should be kept or not?
-- (void) renderLayoutItem: (ETLayoutItem *)item;
-
-- (void) setNextRenderer: (ETRenderer *)renderer;
-
-@end
-
-/* You need to have a value for key ETGraphicPath */
-@interface ETStyleRenderer : ETRenderer
-{
-	NSColor *_outlineColor;
-	NSColor *_interiorColor;
-	float _alpha;
-	// NSMutableDictionary *_styleValues;
-}
-
-- (void) setAlphaValue: (float);
-- (float) alphaValue;
-
-- (void) setInteriorColor: (NSColor *)color;
-- (NSColor *) interiorColor;
-- (void) setOutlineColor: (NSColor *)color;
-- (NSColor *) outlineColor;
-
-- (void) drawShape: (ETShape *)shape;
-
-- (void) drawInRect: (NSRect);
-
-//- renderLayoutItem: inLayoutItem: (ETLayoutItemGroup *)
-//- renderLayoutItem: inDisplayObject: (id)
-//- renderLayoutItem: inView: (NSView *)
-//- renderLayoutItem: inRect: (NSRect)
-
-@end
+// WARNING: Unstable API
 
 /** ETShape instances are model objects. As such they are never manipulated 
-	directly by layout or container, bu these objects interacts with them
+	directly by a layout, but ETLayout subclasses interact with them
 	indirectly through layout items. A shape is made of a path and optional
 	style and transform. Unlike NSBezierPath instances, they support boolean 
 	operations (will probably implemented in a another framework with a 
 	category). */
-@interface ETShape : ETRenderer
+@interface ETShape : ETStyle
 {
-	id _path; // We may later support other paths like spline
-	ETStyleRenderer *_style;
-	NSAffineTransform *_transform;
+	NSBezierPath *_path;
+	NSColor *_fillColor;
+	NSColor *_strokeColor;
+	float _alpha;
+	BOOL _hidden;
+	SEL _resizeSelector;
 }
 
-- (id) initWithPath: (NSBezierPath *)path;
-- (id) initWithPath: (NSBezierPath *)path style: (ETStyleRenderer *)style;
++ (NSRect) defaultShapeRect;
++ (void) setDefaultShapeRect: (NSRect)aRect;
+
++ (ETShape *) shapeWithBezierPath: (NSBezierPath *)aPath;
++ (ETShape *) rectangleShapeWithRect: (NSRect)aRect;
++ (ETShape *) ovalShapeWithRect: (NSRect)aRect;
+
+- (id) initWithBezierPath: (NSBezierPath *)aPath;
+
+- (NSBezierPath *) path;
+- (void) setPath: (NSBezierPath *)aPath;
+- (NSRect) bounds;
+- (void) setBounds: (NSRect)aRect;
+- (SEL) pathResizeSelector;
+- (void) setPathResizeSelector: (SEL)aSelector;
+
+- (NSColor *) fillColor;
+- (void) setFillColor: (NSColor *)color;
+- (NSColor *) strokeColor;
+- (void) setStrokeColor: (NSColor *)color;
+
+- (float) alphaValue;
+- (void) setAlphaValue: (float)newAlpha;
+
+- (BOOL) hidden;
+- (void) setHidden: (BOOL)flag;
 
 /** Returns whether the shape acts as a mask over previous drawing. All drawing
 	done by all previous renderers will be clipped by the path of the receiver. 
 	Following this renderer, only the area matching the non-filled part the 
 	shape will remain and be put through next renderers. */
-- (BOOL) isMask;
-- (void) setMask: (BOOL)flag;
+/*- (BOOL) isMask;
+- (void) setMask: (BOOL)flag;*/
 
-/*- (void) setRotation: (float)rotation;
-- (float) rotation;*/
+- (void) render: (NSMutableDictionary *)inputValues 
+     layoutItem: (ETLayoutItem *)item 
+	  dirtyRect: (NSRect)dirtyRect;
+- (void) drawInRect: (NSRect)rect;
+- (void) drawSelectionIndicatorInRect: (NSRect)indicatorRect;
 
 @end
